--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "@adonisjs/core": "^5.0.4-preview-rc-2",
     "@adonisjs/repl": "^1.1.5",
+    "apollo-server": "^2.19.0",
     "graphql": "^15.4.0",
     "proxy-addr": "^2.0.6",
     "reflect-metadata": "^0.1.13",
