--- a/.adonisrc.json
+++ b/.adonisrc.json
@@ -8,7 +8,14 @@
     "Database": "database",
     "Contracts": "contracts"
   },
-  "preloads": ["./start/routes", "./start/kernel"],
+  "preloads": [
+    "./start/routes",
+    "./start/kernel",
+    {
+      "file": "./start/apollo-server",
+      "environment": ["web"]
+    }
+  ],
   "providers": ["./providers/AppProvider", "@adonisjs/core"],
   "aceProviders": ["@adonisjs/repl"]
 }
