--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@adonisjs/core": "^5.0.4-preview-rc-2",
+    "@adonisjs/lucid": "^9.0.3",
     "@adonisjs/repl": "^1.1.5",
     "apollo-server": "^2.19.0",
     "graphql": "^15.4.0",
