--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,10 @@ HOST=
 NODE_ENV=
 APP_KEY=
 GRAPHQL_PORT=
+DB_CONNECTION=
+MYSQL_HOST=
+MYSQL_PORT=
+MYSQL_USER=
+MYSQL_PASSWORD=
+MYSQL_DB_NAME=
+DB_ROOT_PASSWORD=
