--- a/.env.example
+++ b/.env.example
@@ -4,9 +4,8 @@ NODE_ENV=
 APP_KEY=
 GRAPHQL_PORT=
 DB_CONNECTION=
-MYSQL_HOST=
-MYSQL_PORT=
-MYSQL_USER=
-MYSQL_PASSWORD=
-MYSQL_DB_NAME=
-DB_ROOT_PASSWORD=
+PG_HOST=
+PG_PORT=
+PG_USER=
+PG_PASSWORD=
+PG_DB_NAME=
