--- a/package.json
+++ b/package.json
@@ -24,9 +24,12 @@
   },
   "dependencies": {
     "@adonisjs/core": "^5.0.4-preview-rc-2",
+    "@adonisjs/lucid": "^9.0.3",
     "@adonisjs/repl": "^1.1.5",
     "apollo-server": "^2.19.0",
     "graphql": "^15.4.0",
+    "luxon": "^1.25.0",
+    "pg": "^8.5.1",
     "proxy-addr": "^2.0.6",
     "reflect-metadata": "^0.1.13",
     "regenerator-runtime": "^0.13.7",
