--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "reflect-metadata": "^0.1.13",
     "regenerator-runtime": "^0.13.7",
     "source-map-support": "^0.5.19",
-    "type-graphql": "^1.1.1"
+    "type-graphql": "^1.1.1",
+    "uuid": "^8.3.1"
   }
 }
