--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@adonisjs/lucid": "^9.0.3",
     "@adonisjs/repl": "^1.1.5",
     "apollo-server": "^2.19.0",
+    "class-validator": "^0.12.2",
     "graphql": "^15.4.0",
     "luxon": "^1.25.0",
     "pg": "^8.5.1",
@@ -34,6 +35,7 @@
     "reflect-metadata": "^0.1.13",
     "regenerator-runtime": "^0.13.7",
     "source-map-support": "^0.5.19",
-    "type-graphql": "^1.1.1"
+    "type-graphql": "^1.1.1",
+    "uuid": "^8.3.1"
   }
 }
